# photosphere

./: README.md  capture_sphere.sh  index.html  install_photosphere.sh  mask_sphere.sh  movie_generator.sh  params.json
cad-files/: photosphere.FCStd  theta_base_plate.stl  theta_support.stl
libptp/: AUTHORS  ChangeLog  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in
libptp/m4/: byteorder.m4  stdint.m4
libptp/src/: Makefile.am  Makefile.in  libptp-endian.h  myusb.c  properties.c  ptp.c  ptp.h  ptpcam.c  ptpcam.h
